<resources>
    <string name="app_name">NightRead</string>
    <string name="unknown_author">Неизвестен</string>
    <string name="unknown_series">Неизвестная серия</string>
    <string name="unknown_title">Неизвестно</string>
    <string name="local_txt">Локальный TXT</string>
    <string name="yandex_client_id">bfdea73d1e6242ba826f15d9d0374005</string>
    <string name="auto_light_night_title">Авто тема для чтения</string>
    <string name="auto_light_night_desc">Переключение темы экрана чтения по датчику освещенности</string>
    <string name="auto_brightness_title">Автояркость</string>
    <string name="auto_brightness_desc">Автоматическая подстройка яркости по датчику освещенности</string>
    <string name="amber_filter_title">Защита зрения</string>
    <string name="amber_filter_desc">Теплый янтарный фильтр (Blue Light Filter)</string>
    <string name="amber_filter_intensity">Интенсивность фильтра</string>
    <string name="sleep_timer_title">Таймер сна</string>
    <string name="sleep_timer_desc">Автоматически закроет читалку</string>
    <string name="sleep_timer_duration">Время до отключения</string>
    <string name="shake_to_extend_title">Продление встряхиванием</string>
    <string name="shake_to_extend_desc">Встряхните телефон, чтобы добавить 10 минут</string>
    <string name="extra_dim_title">Сверхнизкая яркость</string>
    <string name="extra_dim_desc">Затемнение экрана ниже системного минимума</string>
    <string name="extra_dim_intensity">Степень затемнения</string>
    <string name="silent_mode_title">Режим тишины</string>
    <string name="silent_mode_desc">Приглушение уведомлений/вибро на высокой скорости (>400 с/мин) и легкая вибрация-встряска при засыпании/задумчивости (&lt;100 с/мин через 2 мин)</string>
    <string name="distraction_free_title">Режим «Без отвлечений»</string>
    <string name="distraction_free_desc">Скрывает панели и системные элементы для максимального погружения в текст</string>
    <string name="bedtime_mode_title">Режим сна (Bedtime Mode)</string>
    <string name="bedtime_mode_desc" formatted="false">Мгновенный ночной профиль: черная тема, янтарный фильтр 50%, сверхнизкая яркость 30% и таймер на 30 мин</string>
    <string name="bedtime_mode_activated">Режим сна активирован! Приятного чтения 🌙</string>
    <string name="stats_title">Статистика и достижения</string>
    <string name="stats_rank_title">Ваш ночной ранг</string>
    <string name="stats_points">Очков опыта: %1$d</string>
    <string name="stats_next_rank">До следующего ранга: %1$d XP</string>
    <string name="stats_total_books">Всего книг</string>
    <string name="stats_completed_books">Прочитано</string>
    <string name="stats_in_progress_books">В процессе</string>
    <string name="stats_favorites_books">Избранное</string>
    <string name="stats_want_to_read">Хочу прочесть</string>
    <string name="stats_bookmarks">Закладки</string>
    <string name="stats_notes">Заметки</string>
    <string name="stats_categories">Популярные жанры</string>
    <string name="stats_achievements_title">Ночные достижения</string>
    <string name="stats_ach_unlocked_status">Получено 🌟</string>
    <string name="stats_ach_locked_status">Заблокировано 🔒</string>
    <string name="drawer_library">Библиотека</string>
    <string name="drawer_reading">Читаю</string>
    <string name="drawer_read">Прочитано</string>
    <string name="drawer_audiobooks">Аудиокниги</string>
    <string name="drawer_bookmarks">Закладки</string>
    <string name="drawer_favorites">Избранное</string>
    <string name="drawer_new_books">Новые книги</string>
    <string name="drawer_want_to_read">Хочу прочитать</string>
    <string name="drawer_stats_achievements">Статистика и достижения</string>
    <string name="drawer_sync">Синхронизация</string>
    <string name="drawer_settings">Настройки</string>
    <string name="sync_title">Синхронизация с Яндекс Диском</string>
    <string name="sync_starting">Запуск фоновой синхронизации...</string>
    <string name="sync_progress">Синхронизация (%1$d%%)</string>
    <string name="sync_channel_name">Синхронизация</string>
    <string name="sync_channel_description">Уведомления о статусе фоновой синхронизации с облаком</string>
    <string name="rag_search_hint">Введите запрос для RAG поиска</string>
    <string name="rag_searching">Поиск фрагментов RAG...</string>
    <string name="rag_no_results">Ничего не найдено</string>
    <string name="rag_results_count">Найдено фрагментов: %1$d</string>
    <string name="rag_page">Стр. %1$d</string>
    <string name="rag_matches">Совпадений: %1$d</string>
    <string name="bookmark_page_date">Страница %1$d • %2$s</string>
    <string name="bookmark_empty_snippet">(Пустая страница)</string>
    <string name="settings_section_language">ЯЗЫК ИНТЕРФЕЙСА / INTERFACE LANGUAGE</string>
    <string name="settings_language_title">Язык приложения / App Language</string>
    <string name="settings_language_desc">Выберите предпочитаемый язык интерфейса</string>
    <string name="language_russian">Русский</string>
    <string name="language_english">English</string>
    <string name="language_german">Deutsch</string>
    <string name="settings_section_appearance">ОФОРМЛЕНИЕ И ТЕМА</string>
    <string name="settings_auto_theme">Авто тема приложения</string>
    <string name="settings_auto_theme_desc">Переключение светлой и темной темы приложения строго по времени (20:00 - 06:00)</string>
    <string name="settings_dali_theme">Тема «Сюрреализм Дали»</string>
    <string name="settings_dali_theme_desc">Включить сюрреалистичный дизайн Дали (выключает автотему)</string>
    <string name="settings_section_sync">СИНХРОНИЗАЦИЯ</string>
    <string name="settings_auto_sync">Авто-синхронизация</string>
    <string name="settings_auto_sync_desc">Синхронизация книг в фоновом режиме</string>
    <string name="settings_sync_period">Период авто-синхронизации</string>
    <string name="settings_sync_period_desc">Как часто запускать фоновую синхронизацию</string>
    <string name="settings_sync_time">Время запуска</string>
    <string name="settings_sync_time_desc">Предпочтительное время запуска (ночью)</string>
    <string name="settings_section_library">НАСТРОЙКИ БИБЛИОТЕКИ</string>
    <string name="settings_select_background">Выбрать фон из галереи</string>
    <string name="settings_pick_bg_dialog_title">Выбор темы для фона</string>
    <string name="settings_pick_bg_dialog_msg">Выберите, для какой темы вы хотите установить фоновое изображение. Рекомендуемое разрешение: 1080×1920 пикселей (вертикальное, 9:16).</string>
    <string name="settings_pick_bg_dialog_light">Для светлой темы</string>
    <string name="settings_pick_bg_dialog_dark">Для тёмной темы</string>
    <string name="settings_pick_bg_dialog_positive">Выбрать</string>
    <string name="settings_scan_library">Сканировать библиотеку</string>
    <string name="settings_manual_import">Ручной импорт</string>
    <string name="settings_delete_duplicates">Найти и удалить дубликаты книг</string>
    <string name="settings_section_cleanup">ОЧИСТКА И ВОССТАНОВЛЕНИЕ</string>
    <string name="settings_reset_cache">Сбросить кэш сканирования</string>
    <string name="settings_clear_library">Очистить библиотеку</string>
    <string name="settings_clear_library_confirm_title">Очистить библиотеку?</string>
    <string name="settings_clear_library_confirm_msg">Все книги будут удалены из базы данных приложения. Это действие необратимо.</string>
    <string name="settings_clear_library_confirm_ok">Удалить всё</string>
    <string name="settings_clear_library_confirm_cancel">Отмена</string>
    <string name="settings_toast_scan_started">Сканирование библиотеки запущено</string>
    <string name="settings_toast_cache_reset">Кэш сканирования успешно сброшен</string>
    <string name="settings_toast_library_cleared">Библиотека полностью очищена</string>
    <string name="settings_toast_background_updated">Фон успешно обновлен</string>
    <string name="settings_toast_background_error">Ошибка сохранения фона</string>
    <string name="settings_app_version">Версия: %1$s</string>
    <string name="sync_yandex_disk">Яндекс Диск</string>
    <string name="sync_status_label">Статус:</string>
    <string name="sync_status_connected">Подключено</string>
    <string name="sync_status_not_authorized">Не авторизован</string>
    <string name="sync_user_prefix">Пользователь: %1$s</string>
    <string name="sync_user_default">Пользователь: -</string>
    <string name="sync_storage_format">Занято: %1$s из %2$s</string>
    <string name="sync_storage_default">Занято: 0 Б из 0 Б</string>
    <string name="sync_btn_connect">Войти через Яндекс</string>
    <string name="sync_btn_disconnect">Выйти из аккаунта</string>
    <string name="sync_params_title">Параметры синхронизации</string>
    <string name="sync_params_desc">Синхронизация загружает ваши книги и обновляет прогресс чтения между всеми вашими устройствами с помощью Яндекс Диска.</string>
    <string name="sync_folder_label">Папка для синхронизации:</string>
    <string name="sync_folder_prefix">Папка: %1$s</string>
    <string name="sync_local_folder_label">Локальная папка для скачивания:</string>
    <string name="sync_local_folder_default">По умолчанию (/Books)</string>
    <string name="sync_btn_select">Выбрать</string>
    <string name="sync_btn_sync_now">Синхронизировать</string>
    <string name="sync_status_syncing">Синхронизация...</string>
    <string name="sync_last_time_format">Последняя синхронизация: %1$s</string>
    <string name="sync_last_time_never">Последняя синхронизация: никогда</string>
    <string name="title_new_books">Новые поступления</string>
    <string name="bs_line_spacing_label">Межстрочный интервал</string>
    <string name="bs_auto_detect">Авто-обнаружение</string>
    <string name="bs_background_search">Поиск книг в фоне</string>
    <string name="app_subtitle">АТМОСФЕРА ПОЛУНОЧИ</string>
    <string name="app_mood_title">Золотая Галактика</string>
    <string name="app_mood_subtitle">ПРЕМИУМ ОФЛАЙН ЧТЕНИЕ</string>
    <string name="app_mood_quote">Когда весь мир засыпает, открываются страницы великих тайн. Читайте в идеальной темноте и уюте.</string>
    <string name="app_init_loading">Инициализация приложения...</string>
    <string name="bs_color_scheme">Цветовая схема</string>
    <string name="bs_font">Шрифт</string>
    <string name="bs_theme">Тема</string>
    <string name="bs_page_animation">Анимация листания</string>
    <string name="bs_text_alignment">Выравнивание текста</string>
    <string name="bs_font_size">Размер шрифта</string>
    <string name="bs_font_weight">Жирность</string>
    <string name="bs_line_spacing">Межстрочный интервал</string>
    <string name="bs_haptic_feedback">Тактильный отклик (Haptic)</string>
    <string name="bs_haptic_feedback_desc">Приятные микровибрации при листании и действиях</string>
    <string name="bs_normal_weight">Обычный</string>
    <string name="bs_medium_weight">Средний</string>
    <string name="bs_bold_weight">Жирный</string>
    <string name="bs_extrabold_weight">Очень жирный</string>
    <string name="bs_minutes">мин</string>
    <string name="warning_swipe_to_exit">Проведите пальцем еще раз для выхода</string>
    <string name="toast_prev_sync_interrupted">Предыдущая фоновая синхронизация была прервана</string>
    <string name="book_detail_generate_ai">Сгенерировать аннотацию (AI)</string>
    <string name="book_detail_read_more">...читать далее</string>
    <string name="book_detail_ai_functions">AI ФУНКЦИИ</string>
    <string name="book_detail_summary">Краткое содержание книги</string>
    <string name="book_detail_characters">Персонажи книги</string>
    <string name="book_detail_info_section">ИНФОРМАЦИЯ</string>
    <string name="book_detail_doc_lang">Язык документа</string>
    <string name="book_detail_bookmark_time">Текущая закладка и время последнего чтения</string>
    <string name="book_detail_file_format">Формат и размер файла</string>
</resources>