<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_nav_library"
            android:title="@string/drawer_library" />
        <item
            android:id="@+id/nav_reading"
            android:icon="@drawable/ic_nav_reading"
            android:title="@string/drawer_reading" />
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_nav_read"
            android:title="@string/drawer_read" />
        <item
            android:id="@+id/nav_audiobooks"
            android:icon="@drawable/ic_nav_audiobooks"
            android:title="@string/drawer_audiobooks" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_nav_documents"
            android:title="Документы" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_nav_favorites"
            android:title="@string/drawer_favorites" />
        <item
            android:id="@+id/nav_new_books"
            android:icon="@drawable/ic_nav_want"
            android:title="@string/drawer_new_books" />
        <item
            android:id="@+id/nav_want_to_read"
            android:icon="@drawable/ic_pin"
            android:title="@string/drawer_want_to_read" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_nav_stats"
            android:title="@string/drawer_stats_achievements" />

        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_nav_sync"
            android:title="@string/drawer_sync" />
    </group>

    <!-- Settings item visually separated in its own group at the bottom -->
    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/drawer_settings" />
    </group>
</menu>
